@@ -12,6 +12,10 @@ other another, or people who we feel we owe thanks to in one way or another.
 If we missed you from this list, drop us a line and we will be sure to give
 credit where it is due.
 
+#People
+-------
+
+Brett Cave (Google search)
 
 #perl@freenode.net
 ------------------
@@ -31,5 +35,6 @@ jagerman
 #infobot@freenode.net
 ---------------------
 quin - many thanks for ctcp version bug help
+
 
 # vim:ts=4:sw=4:expandtab:tw=80
