@@ -37,6 +37,7 @@ _default
     +Dict
     +Exchange
     +Factoids
+    +Google
     +HTTPDtype
     +Kernel
     +Math
@@ -48,7 +49,6 @@ _default
     +Topic
     +Units
     +UserInfo
-    +W3Search
     +Weather
     +Zippy
     addressCharacter ~
